<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    app:cardBackgroundColor="@color/accent"
    app:cardElevation="4dp">
    <!--android:layout_marginEnd="4dp"
    android:layout_marginStart="4dp"-->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_overview_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_movie_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_overview_label"
            tools:text="@string/movie_overview_text" />

        <TextView
            android:id="@+id/text_director_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/movie_director_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_movie_overview" />

        <ImageView
            android:id="@+id/image_movie_director"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/movie_director_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_director_label"
            app:layout_constraintTop_toBottomOf="@+id/text_director_label"
            tools:src="@drawable/poster342" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>