<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="2dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="2dp"
    android:layout_marginBottom="4dp"
    app:cardElevation="8dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_movie"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_image_thumbnail"
            android:foreground="@drawable/grey_ripple"
            android:scaleType="centerCrop"
            android:src="@drawable/poster185"
            android:stateListAnimator="@animator/raise"
            app:layout_constraintDimensionRatio="w, 1:1.5"
            app:layout_constraintStart_toStartOf="@+id/constraint_layout"
            app:layout_constraintTop_toTopOf="@+id/constraint_layout" />

        <TextView
            android:id="@+id/text_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/image_movie"
            app:layout_constraintStart_toStartOf="@+id/image_movie"
            app:layout_constraintTop_toBottomOf="@+id/image_movie"
            tools:text="@string/movie_title" />

        <TextView
            android:id="@+id/text_movie_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/text_movie_title"
            tools:text="@string/movie_date" />

        <ImageView
            android:id="@+id/image_rating"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/movie_image_rating"
            android:scaleType="centerCrop"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/text_movie_date"
            app:layout_constraintEnd_toStartOf="@+id/text_movie_rating"
            app:layout_constraintTop_toTopOf="@+id/text_movie_date"
            app:srcCompat="@drawable/ic_star" />

        <TextView
            android:id="@+id/text_movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/movie_image_rating"
            android:text="@string/movie_rating"
            app:layout_constraintBottom_toBottomOf="@+id/image_rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_rating" />
    </android.support.constraint.ConstraintLayout>

</android.support.design.card.MaterialCardView>
