<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/scrim"
    android:paddingBottom="4dp"
    android:paddingTop="4dp">

    <ImageView
        android:id="@+id/image_movie"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/movie_image_thumbnail"
        android:foreground="@drawable/grey_ripple"
        android:scaleType="centerCrop"
        android:src="@drawable/poster185"
        android:stateListAnimator="@animator/raise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w, 1:1.5"
        app:layout_constraintStart_toStartOf="@+id/constraint_layout"
        app:layout_constraintTop_toTopOf="@+id/constraint_layout" />

    <TextView
        android:id="@+id/text_movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:lines="1"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_movie_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_movie"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/movie_title" />

    <TextView
        android:id="@+id/text_movie_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_movie_title"
        app:layout_constraintTop_toBottomOf="@+id/text_movie_title"
        tools:text="@string/movie_date" />

</android.support.constraint.ConstraintLayout>
